@@ -2,7 +2,14 @@ TestCase("Play Stop and Pause Commands Tests", {
     setUp: function() {
         this.presenter = Addonvideo_create();
         this.presenter.video = document.createElement('video');
+
+        this.presenter.isVideoLoaded = true;
+        this.presenter.commandsQueue = {
+            addTask: function () {}
+        };
+
         sinon.stub(this.presenter, 'seek');
+        sinon.stub(this.presenter.commandsQueue, 'addTask')
     },
 
     'test play when video is paused': function() {
@@ -62,5 +69,38 @@ TestCase("Play Stop and Pause Commands Tests", {
         this.presenter.pause();
 
         assertFalse('Pause method should NOT be executed', this.presenter.video.pause.called);
+    },
+
+    'test play called before video is loaded': function () {
+        this.presenter.isVideoLoaded = false;
+
+        this.presenter.play();
+
+        assertTrue(this.presenter.commandsQueue.addTask.calledWith('play', []));
+    },
+
+    'test pause called before video is loaded': function () {
+        this.presenter.isVideoLoaded = false;
+
+        this.presenter.pause();
+
+        assertTrue(this.presenter.commandsQueue.addTask.calledWith('pause', []));
+    },
+
+    'test stop called before video is loaded': function () {
+        this.presenter.isVideoLoaded = false;
+
+        this.presenter.stop();
+
+        assertTrue(this.presenter.commandsQueue.addTask.calledWith('stop', []));
+    },
+
+    'test seek called before video is loaded': function () {
+        this.presenter.isVideoLoaded = false;
+        this.presenter.seek.restore();
+
+        this.presenter.seek(10);
+
+        assertTrue(this.presenter.commandsQueue.addTask.calledWith('seek', [10]));
     }
 });
